--- a/Astghik_Saghyan/Homework/C++/15_17.04.18/Makefile
+++ b/Astghik_Saghyan/Homework/C++/15_17.04.18/Makefile
@@ -1,2 +1,15 @@
-all:
-	g++ -std=c++11 main.cpp vector.cpp -o main:
+compiler = -std=c++11
+
+all: a.out
+
+a.out: main.o vector.o
+	g++ $(compiler) main.o vector.o -o a.out
+
+main.o: main.cpp
+	g++ $(compiler) main.cpp -c
+
+vector.o: vector.cpp vector.hpp
+	g++ $(compiler) vector.cpp -c 
+
+clean:
+	rm -rf *o
