--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-script: ./Astghik_Saghyan/Homeworks/Python/03_13.06.18/testUnit.py
-  - python -m testUnit
+script:
+  - python -m unittest ./Astghik_Saghyan/Homeworks/Python/03_13.06.18/testUnit
