--- a/Mikayel_Gabrielyan/Homeworks/Maven/1_17.07/jsonParser/pom.xml
+++ b/Mikayel_Gabrielyan/Homeworks/Maven/1_17.07/jsonParser/pom.xml
@@ -30,6 +30,12 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.9.8</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
