--- a/Elya_Karapetyan/Homeworks/Maven/1_16-07/json-diff/pom.xml
+++ b/Elya_Karapetyan/Homeworks/Maven/1_16-07/json-diff/pom.xml
@@ -44,5 +44,10 @@
         <artifactId>json-simple</artifactId>
         <version>1.1.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20180130</version>
+    </dependency>
   </dependencies>
 </project>
