--- a/Anush_Ghazaryan/Homeworks/Maven/1_16.07/testng-maven/pom.xml
+++ b/Anush_Ghazaryan/Homeworks/Maven/1_16.07/testng-maven/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.app</groupId>
-    <artifactId>MyJsonReaderWriter</artifactId>
+    <artifactId>MyJson</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>MyJsonReaderWriter</name>
+    <name>MyJson</name>
     <url>http://maven.apache.org</url>
 
     <properties>
