--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/package.json
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "new-app",
+  "name": "cookmaster01",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "mdbreact": "^4.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
