--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/package.json
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "react-validation": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
