--- a/Arman_Avdalyan/Homeworks/Web/ReactJS/1_03.09/table/package.json
+++ b/Arman_Avdalyan/Homeworks/Web/ReactJS/1_03.09/table/package.json
@@ -8,7 +8,11 @@
     "react-dom": "^16.4.2",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-loader": "^8.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
