--- a/Karen_Vardumyan/Homeworks/Javascript/React/my-app/package.json
+++ b/Karen_Vardumyan/Homeworks/Javascript/React/my-app/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
+    "react-input-calendar": "^0.5.3",
+    "react-moment": "^0.7.9",
     "react-scripts": "1.1.5"
   },
   "scripts": {
