--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/my-app/package.json
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/my-app/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap4-form-validation": "^1.0.8",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
     "validator": "^10.7.1"
   },
   "scripts": {
